#267 KSP-free JSON deserialization of reactive entities via a reflection fallback